tests/ui/const-generics/early/trivial-const-arg-macro-nested-braces.stderr
error: generic parameters may not be used in const operations
  --> $DIR/trivial-const-arg-macro-nested-braces.rs:4:11
   |
LL |         { N }
   |           ^ cannot perform const operation using `N`
...
LL | fn foo<const N: usize>() -> A<{ y!() }> {
   |                                 ---- in this macro invocation
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = note: this error originates in the macro `y` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

